# cmake-modules

./: .gitignore  CMakeLists.txt  README.en.md  README.md  cmake-config.bat
crypto-lib/: CMakeLists.txt
crypto-lib/include/: crypto.h
crypto-lib/src/: crypto.c
demo1/: CMakeLists.txt
demo1/src/: demo1.c
demo2/: CMakeLists.txt
demo2/src/: demo2.c
math-lib/: CMakeLists.txt
math-lib/include/: _math.h
math-lib/src/: _math.c  math-dll.c
